GUI work and some fixes